[package]
name = "homebox-label-maker"
description = "Create custom label sheets from a Homebox instance"
repository = "https://github.com/lilopkins/homebox-label-maker"
authors = [
    "Lily Hopkins <lily@hpkns.uk>",
]
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
build_html = "2.7.0"
bytes = "1.10.1"
clap = { version = "4.5.48", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
derive_more = { version = "2.0.1", features = ["display", "debug"] }
pest = "2.8.2"
pest_derive = "2.8.2"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
rpassword = "7.4.0"
serde = { version = "1.0.227", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
